test/should_pass/basic_201.grg
actions basic_201;

rule r {
	pattern {
		if{ true; }
		negative {
		}
	}
	modify {
	}
}

