test/should_fail/annot_005.grg
actions annot_005;

rule r {
	pattern {
		[prio=42].;
	}
	modify {}
}
